initial commit for update to microbiome homepage #31199 #30748
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@93565 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/css/PlasmoDB.css
+++ b/Site/webapp/css/PlasmoDB.css
@@ -9,7 +9,7 @@ body {
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 	 =FOOTER
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/	
-#fixed-footer {
+.Footer {
   background-color: #efedf2;
   border: 1px solid #dfdfdf;
 }
@@ -91,12 +91,4 @@ body {
   background: #985c86;
 }
 
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-	 =OLD FOOTER
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-
-#footer{
-   background-image: url(../images/PlasmoDB/footer.png);
-}
 
