--- a/Site/webapp/css/AllApiSites.css
+++ b/Site/webapp/css/AllApiSites.css
@@ -26,7 +26,7 @@ header {
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 	 =NEW FOOTER (gene page)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-#fixed-footer {
+.Footer {
   background-color: #f0f0f0;
 
 }
