--- a/Site/webapp/wdkCustomization/css/client.scss
+++ b/Site/webapp/wdkCustomization/css/client.scss
@@ -1,4 +1,4 @@
-@import '~eupathdb/wdkCustomization/css/client.css';
+@import '~eupathdb/wdkCustomization/css/client.scss';
 @import '~site/css/AllApiSites.css';
 
 /* Hide default record ID printed by WDK for genes */
