--- a/Site/webapp/wdkCustomization/css/pathway.css
+++ b/Site/webapp/wdkCustomization/css/pathway.css
@@ -2,14 +2,36 @@
   position: relative;
 }
 
+#eupathdb-PathwayRecord-cytoscape .eupathdb-Menu,
+#eupathdb-PathwayRecord-cytoscape .eupathdb-Submenu {
+  background-color: white;
+}
+
 #eupathdb-PathwayRecord-cytoscape .eupathdb-Menu {
-  width: 90%;
+  width: 100%;
+  min-width: 0px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  border: 1px solid black;
+}
+
+#eupathdb-PathwayRecord-cytoscape .eupathdb-MenuItem:hover {
+  background-color: #f3f3f3;
+}
+
+#eupathdb-PathwayRecord-cytoscape .eupathdb-MenuItemText {
+  color: black;
+}
+
+#eupathdb-PathwayRecord-cytoscape .eupathdb-MenuItemText__parent:after {
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .eupathdb-PathwayRecord-cytoscapeIcon {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 4px;
+  top: 41px;
+  font-size: .9em;
 }
 
 .link {
@@ -43,11 +65,14 @@
 
 .eupathdb-PathwayRecord-CytoscapeContainer {
   border:1px solid black;
-  border-radius:5px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top: none;
   width: 100%;
   height: 100%;
   height: calc(100vh - 100px);
   padding-bottom: 26px;
+  box-sizing: border-box;
 }
 
 #eupathdb-PathwayRecord-generaSelector-wrapper {
