adding the sitemap line
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@98103 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
@@ -13,3 +13,5 @@ Allow: /{{robots_webapp}}/*.css
 Allow: /{{robots_webapp}}/service/*
 Allow: /sitemap.txt
 
+Sitemap: https://{{hostname}}/sitemap.txt
+
