using project instead of hostname will have to figure something for schisto
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/api-build-43@98109 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
@@ -13,5 +13,5 @@ Allow: /{{ webapp_ctx }}/*.css
 Allow: /{{ webapp_ctx }}/service/*
 Allow: /sitemap.txt
 
-Sitemap: https://{{ hostname }}/sitemap.txt
+Sitemap: https://{{ project }}.org/sitemap.txt
 
