--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
@@ -6,6 +6,11 @@
 #Environment: {{ env|default() }}
 #site_vars file: {{ site_vars }}
 
+User-agent: *
+Disallow: /
+Allow: /$
+Allow: /{{ webapp_ctx }}/$
+Allow: /{{ webapp_ctx }}/home.jsp
 Allow: /{{ webapp_ctx }}/app/search/organism/GenomeDataTypes/result*
 Allow: /{{ webapp_ctx }}/app/record/organism/
 Allow: /{{ webapp_ctx }}/*.js
@@ -13,5 +18,5 @@ Allow: /{{ webapp_ctx }}/*.css
 Allow: /{{ webapp_ctx }}/service/*
 Allow: /sitemap.txt
 
-Sitemap: https://{{ project }}.org/sitemap.txt
+Sitemap: https://{{ hostname }}/sitemap.txt
 
