add live_hostname var to remove wN prefix from live sites - used in robots.txt/sitemap
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@98117 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
@@ -18,5 +18,5 @@ Allow: /{{ webapp_ctx }}/*.css
 Allow: /{{ webapp_ctx }}/service/*
 Allow: /sitemap.txt
 
-Sitemap: https://{{ hostname }}/sitemap.txt
+Sitemap: https://{{ live_hostname }}/sitemap.txt
 
