--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/sitemap.txt.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/sitemap.txt.j2
@@ -6,4 +6,4 @@
 #Environment: {{ env|default() }}
 #site_vars file: {{ site_vars }}
 
-https://{{ hostname }}/{{ webapp_ctx }}/app/search/organism/GenomeDataTypes/result
+https://{{ live_hostname }}/{{ webapp_ctx }}/app/search/organism/GenomeDataTypes/result
