Add default fetch size as a DB config param in comment config
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@98421 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/comment-config.xml.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/comment-config.xml.j2
@@ -29,6 +29,9 @@ site_vars file: {{ site_vars }}
     {% if commentconfig_maxWait is defined -%}
     maxWait="{{ commentconfig_maxWait }}"
     {% endif -%}
+    {% if commentconfig_defaultFetchSize is defined -%}
+    defaultFetchSize="{{ commentconfig_defaultFetchSize }}"
+    {% endif -%}
     {% if commentconfig_showConnections is defined -%}
     showConnections="{{ commentconfig_showConnections }}"
     {% endif -%}
