More modest tweaks to Add Step Panel styling
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/strategy-loading@99950 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/js/client/components/strategies/ColocateStepForm.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/strategies/ColocateStepForm.scss
@@ -1,5 +1,37 @@
 .ColocateStepForm {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
   &--Header {
     text-align: center;
+  }
+
+  &--SearchInputSelector {
+    display: flex;
+    flex-direction: column;
+
+    width: 25%;
+
+    >:first-child {
+      margin-bottom: 1em;
+    }
+      
+    >:not(:first-child) {
+      margin: 1em 0;
+    }
+  }
+
+  .wdk-CategoriesCheckboxTree {
+    position: relative;
+    border: 1px solid grey;
+    padding: 0 0.5em;
+    background-color: white;
+    border-radius: 1px;
+    text-align: left;
+
+    .wdk-CheckboxTreeLinks {
+      margin-left: unset;
+    }
   }
 }
