Cleanup of Add Step Panel styling
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/strategy-loading@100192 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/js/client/components/questions/SpanLogicForm.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/SpanLogicForm.scss
@@ -63,6 +63,7 @@ $grey-feature: #646464;
     grid-column: 3;
 
     display: flex;
+    justify-content: center;
     align-items: center;
 
     margin-left: 0.25em;
