--- a/Site/webapp/wdkCustomization/js/client/components/strategies/ColocateStepMenu.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/strategies/ColocateStepMenu.scss
@@ -23,9 +23,14 @@
     }
   }
 
-  &--PrimaryInputLabel {
+  &--ColocationIcon {
+    background-image: url('../questions/overlap.svg');
+    background-size: cover;
+
     border: 1px solid black;
-    padding: 1em;
+
+    width: 4em;
+    height: 4em;
   }
 
   &--RecordClassSelector {
