Render Step Box icon for span logic binary steps
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/strategy-loading@100229 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/js/client/components/questions/SpanLogicForm.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/SpanLogicForm.scss
@@ -298,11 +298,10 @@ $grey-feature: #646464;
     }
   }
 
-  // FIXME Standardize the way we generate these icons 
-  // FIXME across the WDKClient and ApiCommonWebsite
   &--SpanOperator {
     background-color: $grey-background;
-    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 
     width: 4em;
     height: 4em;
