--- a/Site/webapp/wdkCustomization/js/client/components/strategies/ColocateStepMenu.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/strategies/ColocateStepMenu.scss
@@ -25,7 +25,8 @@
 
   &--ColocationIcon {
     background-image: url('../questions/overlap.svg');
-    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 
     border: 1px solid black;
 
