Implement 'revise to boolean operator' for operator step of potentially mixed type (e.g. Span Logic)
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/strategy-loading@100356 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/js/client/components/questions/SpanLogicForm.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/SpanLogicForm.scss
@@ -308,15 +308,15 @@ $grey-feature: #646464;
 
     border: 1px solid grey;
 
-    &__overlap {
+    &__OVERLAP {
       background-image: url("./overlap.svg");
     }
 
-    &__b_contain_a {
+    &__B_CONTAIN_A {
       background-image: url("./b_contain_a.svg");
     }
 
-    &__a_contain_b {
+    &__A_CONTAIN_B {
       background-image: url("./a_contain_b.svg");
     }
   }
