--- a/Site/webapp/wdkCustomization/js/client/components/questions/RadioParams.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/RadioParams.scss
@@ -1,11 +1,19 @@
-.wdk-InactiveRadioParam {
-  opacity: 0.35;
-
-  &:hover {
-    opacity: 0.6;
+.wdk-QuestionForm {
+  &RadioParamElement {
+    position: relative;
+    left: -2em;
+    bottom: -2.75em;
   }
 
-  * {
-    opacity: inherit;
+  .wdk-InactiveRadioParam {
+    opacity: 0.7;
+
+    &:hover {
+      opacity: 0.85;
+    }
+
+    * {
+      opacity: inherit;
+    }
   }
 }
