--- a/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
@@ -2,6 +2,10 @@
   margin: auto;
   width: 81.25rem;
 
+  > .wdk-QuestionFormQuestionHeader {
+    position: inherit;
+  }
+
   .TableToolbar-Children {
     display: flex;
     justify-content: space-between;
