--- a/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
@@ -13,8 +13,15 @@
     width: 100%;
   }
 
-  .wdk-RealTimeSearchBox {
+  .wdk-RealTimeSearchBoxContainer {
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
     width: 25%;
+    
+    span {
+      margin-right: 1em;
+    }
   }
 
   .wdk-InternalGeneDatasetFormLegend {
