Refactoring of DynSpansBySourceId submission logic; modest styling tweak to the same

--- a/Site/webapp/wdkCustomization/js/client/components/questions/DynSpansBySourceId.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/DynSpansBySourceId.scss
@@ -38,6 +38,10 @@
       display: grid;
       grid-template-columns: 14em 1fr;
     }
+
+    .wdk-DatasetParamLabel {
+      flex: 2.5
+    }
   }
 
   &MutuallyExclusiveParams {
