--- a/Site/webapp/wdkCustomization/js/client/components/questions/RadioParams.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/RadioParams.scss
@@ -6,7 +6,7 @@
   }
 
   .wdk-InactiveRadioParam {
-    opacity: 0.7;
+    opacity: 0.8;
 
     &:hover {
       opacity: 0.85;
@@ -14,6 +14,10 @@
 
     * {
       opacity: inherit;
+    }
+
+    .wdk-QuestionFormRadioParamElement {
+      opacity: 1;
     }
   }
 }
