Adjust max-width for DynSpansBySourceId and InternalGeneDataset

--- a/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/InternalGeneDataset.scss
@@ -1,6 +1,6 @@
 .wdk-InternalGeneDatasetForm {
   margin: auto;
-  width: 81.25rem;
+  max-width: 81.25rem;
 
   > .wdk-QuestionFormQuestionHeader {
     position: inherit;
