--- a/Site/webapp/wdkCustomization/js/client/components/OrganismFilter.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/OrganismFilter.scss
@@ -1,16 +1,28 @@
 .OrganismFilter {
   width: 30em;
-  padding-left: 3em;
+  padding-right: 3em;
+  padding-left: 1em;
+  border: 1px solid #ccc;
+  position: relative;
+  margin-top: 1.6em;
+  margin-right: -1px;
 
   &--Heading {
-    font-size: 1.4em;
-    padding: 0 0 .5em 0;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 0;
+    margin-left: 1.4em;
+    margin-top: 1.4em;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   &--Buttons {
-    text-align: center;
+    text-align: right;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    font-size: .9em;
     &__hidden {
       visibility: hidden;
     }
@@ -60,19 +72,24 @@
     color: #FFF;
     cursor: pointer;
     height: 2em;
-    left: 0;
+    right: 0;
     padding: 5px;
     position: absolute;
     text-align: center;
     top: 7em;
-    transform-origin: left bottom;
-    transform: rotate(90deg);
+    transform-origin: right bottom;
+    transform: rotate(-90deg);
     white-space: nowrap;
     width: 18em;
 
     &Text {
       margin: 0 2em;
     }
+  }
+
+  .wdk-CheckboxTreeLinks > div {
+    text-align: left;
+    margin: .15em 0;
   }
 
 }
