--- a/Site/webapp/wdkCustomization/js/client/components/OrganismFilter.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/OrganismFilter.scss
@@ -1,10 +1,10 @@
 .OrganismFilter {
   width: 28em;
   padding-right: 3em;
-  padding-left: 1em;
+  padding-left: .5em;
   border: 1px solid #ccc;
   position: relative;
-  margin-top: 1.6em;
+  margin-top: 1.65em;
   margin-right: -1px;
 
   &--Heading {
