--- a/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
+++ b/Model/lib/conifer/roles/conifer/templates/ApiCommonWebsite/robots.txt.j2
@@ -12,7 +12,9 @@ Allow: /$
 Allow: /{{ webapp_ctx }}/$
 Allow: /{{ webapp_ctx }}/home.jsp
 Allow: /{{ webapp_ctx }}/app/search/organism/GenomeDataTypes/result*
-Allow: /{{ webapp_ctx }}/app/record/organism/
+Allow: /{{ webapp_ctx }}/app/record/organism/*
+Allow: /{{ webapp_ctx }}/app/search/dataset/AllDatasets/result*
+Allow: /{{ webapp_ctx }}/app/record/dataset/*
 Allow: /{{ webapp_ctx }}/*.js
 Allow: /{{ webapp_ctx }}/*.css
 Allow: /{{ webapp_ctx }}/service/*
