Add styling for Header + refactor homepage components to support a containerClassName prop

--- a/Site/webapp/wdkCustomization/js/client/components/newhomepage/VEuPathDB.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/newhomepage/VEuPathDB.scss
@@ -11,7 +11,7 @@ body.vpdb-Body {
       "footer footer footer";
   
     grid-template-columns: 15.625rem 1fr 15.625rem;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: 9.0625rem 1fr auto;
   
     height: 100vh;
 
