--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -41,6 +41,28 @@ body.vpdb-Body {
           transition-delay: 0.1s;
         }
       }
+
+      .vpdb-SubmenuDivider {
+        padding: 0.5rem 0.125rem;
+        border-top: 0.0625rem solid gray;
+        border-bottom: 0.0625rem solid gray;
+        font-weight: bold;
+      }
+
+      .wdk-CategoriesCheckboxTreeWrapper {
+        position: relative;
+        .wdk-CheckboxTreeItem__leaf {
+          .wdk-CheckboxTreeNodeContent { 
+            a {
+              color: #069;
+            }
+      
+            i {
+              margin-right: 0.25em;
+            }
+          }
+        }
+      }
     }
     
     .vpdb-SearchPane {
