Add social media links to Community submenu

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -63,6 +63,21 @@ body.vpdb-Body {
           }
         }
       }
+
+      .vpdb-CommunitySocialMediaLink {
+        display: flex;
+        align-items: center;
+
+        i, svg {
+          margin-right: 0.5em;
+        }
+
+        &__wide {
+          i, svg {
+            margin-right: 0.325rem;
+          }
+        }
+      }
     }
     
     .vpdb-SearchPane {
