--- a/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
@@ -1,18 +1,56 @@
 .vpdb-WorkshopExercises {
+  padding: 0 .9375rem;
+
   h3 {
     font-size: 1.75rem;
   }
 
+  h5 {
+    font-size: 1.25rem;
+    margin-top: 0;
+    margin-bottom: 0.75rem;
+  }
+
+  &Header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    a {
+      font-size: 0.9rem;
+
+      i {
+        margin-right: 0.25em;
+      }
+    }
+  }
+
   .vpdb-ExerciseList {
     display: flex;
+    padding: .9375rem;
 
     &__expanded {
       display: grid;
-      grid-template-columns: repeat(auto-fill, 250px);
+      grid-template-columns: repeat(auto-fill, 300px);
+      justify-content: center;
+
+      // FIXME: IE 11 does not support grid-gap
+      grid-gap: 1.2rem;
     }
 
     &Item {
-      width: 250px;
+      width: 300px;
+      border-radius: 0.25rem;
+      padding: 1.25rem;
+
+      a {
+        color: white;
+      }
+
+      &Content {
+        color: white;
+        font-size: 0.9rem;
+      }
     }
   }
 }
