--- a/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
@@ -29,6 +29,7 @@
       font-weight: bold;
       flex: 0 0 33.333333%;
       max-width: 33.333333%;
+      margin-top: 3.0625rem;
     }
 
     &Item {
