Modest styling tweaks to some homepage links; fix typo for News pane's grid-area

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
@@ -18,6 +18,8 @@
     
     a {
       font-size: 0.9rem;
+      color: #00304c;
+      font-weight: bold;
 
       i {
         margin-right: 0.25em;
