--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -86,6 +86,12 @@ body.vpdb-Body {
 
     .vpdb-Main {
       grid-area: content;
+
+      padding: 0 1rem;
+
+      > hr {
+        margin: 1.5rem 0 0.5rem 0;
+      }
     }
 
     .vpdb-NewsPane {
