--- a/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
@@ -25,7 +25,7 @@
     }
   }
 
-  .vpdb-ExerciseList {
+  .vpdb-CardList {
     display: flex;
     padding: 0.9375rem;
 
@@ -42,14 +42,30 @@
       width: 300px;
       border-radius: 0.25rem;
       padding: 1.25rem;
+      color: white;
+
+      p, ul {
+        line-height: 1.3;
+      }
+
+      ul {
+        list-style: none;
+      }
 
       a {
         color: white;
       }
 
       &Content {
-        color: white;
         font-size: 0.9rem;
+
+        .fa-li {
+          top: 0;
+        }
+
+        &Link {
+          text-decoration: underline;
+        }
       }
     }
   }
