Hide social media icons when header is shrunk

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -40,6 +40,10 @@ body.vpdb-Body {
           transition-duration: 0.3s;
           transition-delay: 0.1s;
         }
+
+        .ebrc-FooterSocialMediaLinks {
+          display: none;
+        }
       }
 
       .vpdb-SubmenuDivider {
