Add wider background image for PlasmoDB header

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -130,7 +130,7 @@ body.vpdb-Body {
       }
 
       .vpdb-Header {
-        background-image: url('~site/images/PlasmoDB/vpdb-background.jpg');
+        background-image: url('~site/images/PlasmoDB/vpdb-background.png');
         background-size: cover;
 
         .ebrc-HeaderBranding {
