--- a/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
@@ -1,10 +1,10 @@
 .vpdb-WorkshopExercises {
   h3 {
-    font-size: 1.75rem;
+    font-size: 2.33333333333em;
   }
 
   h5 {
-    font-size: 1.25rem;
+    font-size: 1.66666666667em;
     margin-top: 0;
     margin-bottom: 0.75rem;
   }
@@ -15,7 +15,7 @@
     align-items: center;
     
     a {
-      font-size: 0.9rem;
+      font-size: 1.2em;
       color: #00304c;
       font-weight: bold;
 
@@ -47,7 +47,7 @@
       }
 
       &Content {
-        font-size: 0.9rem;
+        font-size: 1.2em;
 
         .fa-li {
           top: 0;
