--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -31,6 +31,7 @@ body.vpdb-Body {
       &__collapsed {
         height: 4.0625rem;
         padding: 10px 20px;
+        box-shadow: 0 2px 4px #00000066;
 
         .ebrc-HeaderBranding {
           font-size: 25px;
