--- a/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/FeaturedTools.scss
@@ -61,6 +61,7 @@
   &Selection {
     flex: 0 0 66.666667%;
     max-width: 66.666667%;
+    box-shadow: 0px 0px 8px 2px #00000029;
 
     &Header {
       color: white;
@@ -70,6 +71,8 @@
 
     &Body {
       padding: 1.25rem;
+      font-size: 1.2em;
+      overflow-x: auto;
     }
   }
 }
