update styling and persist selection

--- a/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/WorkshopExercises.scss
@@ -33,6 +33,7 @@
       border-radius: 0.25rem;
       padding: 1.25rem;
       color: white;
+      box-shadow: 1px 1px 8px #000000a1;
 
       p, ul {
         line-height: 1.3;
