--- a/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/homepage/VEuPathDBHomePage.scss
@@ -3,16 +3,16 @@ body.vpdb-Body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 
   .vpdb-RootContainer {
+
     display: grid;
 
     // FIXME: Should also provide fallback styling for IE11,
     // as unfortunately, IE11 doesn't support grid-template-areas
     grid-template-areas:
-      "header header header"
-      "nav content side"
-      "footer footer footer";
-  
-    grid-template-columns: 15.625rem 1fr 18.75rem;
+      "header"
+      "content"
+      "footer";
+    
     grid-template-rows: 9.0625rem 1fr auto;
   
     min-height: 100vh;
@@ -91,8 +91,6 @@ body.vpdb-Body {
       margin: 1rem 0;
       padding: 0 2rem;
 
-      overflow: hidden;
-
       > hr {
         margin: 1.5rem 0 0.5rem 0;
       }
@@ -166,6 +164,23 @@ body.vpdb-Body {
         }
       }
     }
+
+    &__home {
+      // FIXME: Should also provide fallback styling for IE11,
+      // as unfortunately, IE11 doesn't support grid-template-areas
+      grid-template-areas:
+        "header header header"
+        "nav content side"
+        "footer footer footer";
+    
+      grid-template-columns: 15.625rem 1fr 18.75rem;
+      grid-template-rows: 9.0625rem 1fr auto;
+
+      .vpdb-Main {
+        overflow: hidden;
+      }
+    }
+
   }
 
   .vpdb-BgDark {
@@ -178,5 +193,10 @@ body.vpdb-Body {
 
   .vpdb-BgWash {
     background-color: #eef0f2;
+  }
+
+  // Fix for question page sticky header
+  .wdk-QuestionFormQuestionHeader {
+    top: 5.5em;
   }
 }
